--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 aniso8601==3.0.2
+bcrypt==3.1.4
+cffi==1.11.5
 Click==7.0
 Flask==1.0.2
+Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==3.13.1
 Flask-RESTful==0.3.6
+gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+pycparser==2.19
+PyJWT==1.4.2
 pytz==2018.5
 six==1.11.0
 Werkzeug==0.14.1
