--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: python
 python:
    - "3.5"
+cache: pip
+
+install:
+  -pip install --upgrade pip
+  -pip install -r requirements.txt
+  -pip install coverage
+  -pip  install coveralls
+
 script:
-    - nosetests --with-coverage --cover-package=app/tests/v1 && coverage report
+    - nosetests --with-coverage
 after_success:
     - coveralls
