--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,13 @@ python:
 cache: pip
 
 install:
-  -pip install --upgrade pip
-  -pip install -r requirements.txt
-  -pip install coverage
-  -pip  install coveralls
+
+  - pip install -r requirements.txt
+
 
 script:
-    - nosetests --with-coverage
+  - coverage run --source=app.api.v1 -m pytest  app/tests && coverage reportS
+  - coveralls
+
 after_success:
     - coveralls
